@@ -165,6 +165,12 @@ task smoke(type: Test, description: 'Runs the smoke tests.', group: 'Verificatio
     finalizedBy aggregate
 }
 
+task fortifyScan(type: JavaExec)  {
+  main = "uk.gov.hmcts.fortifyclient.FortifyClientMainApp"
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 jacocoTestReport {
     executionData(test)
     reports {
@@ -421,7 +427,7 @@ dependencies {
     testCompile(group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: versions.springBoot) {
         exclude group: 'junit', module: 'junit'
     }
-    testImplementation 'com.github.hmcts:befta-fw:fix-env-extend-befta-fw-SNAPSHOT'
+    testImplementation 'com.github.hmcts:befta-fw:8.4.0'
     //compile fileTree(dir: 'lib', include: 'befta-fw-5.11.0.jar')
     compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
 
@@ -436,6 +442,7 @@ dependencies {
     testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
     testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
     testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+    testCompile 'com.github.hmcts:fortify-client:1.2.0:all'
 
     smokeTestCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
     smokeTestCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
